moved dinip to a new branch

--- a/index.html
+++ b/index.html
@@ -71,11 +71,6 @@
           target="_blank" rel="noopener"><img class="icon" src="icons/spotify.svg" alt="Spotify Logo">Spotify</a>
         <br>
 
-        <!-- Bot -->
-        <a class="button button-bot" href="https://twitchalerts.dinip.pt/" target="_blank" rel="noopener"><img
-            class="icon" src="https://cdn-bot.dinip.pt/static/duck.png" alt="Reddit Logo">Twitch Alerts</a>
-        <br>
-
         <!-- Reddit -->
         <a class="button button-reddit" href="https://www.reddit.com/user/Dinip12/" target="_blank" rel="noopener"><img
             class="icon" src="icons/reddit.svg" alt="Reddit Logo">Reddit</a>
@@ -91,15 +86,10 @@
           <br>  -->
 
         <!-- Email -->
-        <a class="button button-default" href="mailto:me@dinispimpao.pt" target="_blank" rel="noopener"><img
-            class="icon" src="icons/email.svg" alt="Email Icon">me@dinispimpao.pt</a>
+        <a class="button button-default" href="mailto:me@dinip.pt" target="_blank" rel="noopener"><img
+            class="icon" src="icons/email.svg" alt="Email Icon">me@dinip.pt</a>
         <br>
-
-        <!-- Email -->
-        <a class="button button-default" href="mailto:me@dinip.pt" target="_blank" rel="noopener"><img class="icon"
-            src="icons/email_alt.svg" alt="Email Icon">me@dinip.pt</a>
-        <br>
-
+        
         <!-- Steam -->
         <a class="button button-steam" href="https://steamcommunity.com/id/dinip/" target="_blank" rel="noopener"><img
             class="icon" src="icons/steam.svg" alt="Steam Logo">Steam</a>
