local images; dark color;

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton-dark.css">
   <link rel="stylesheet" href="css/brands.css">
-  <link rel="icon" type="image/png" href="https://cdn-bot.dinip.pt/static/dinip_logo_64.png">
+  <link rel="icon" type="image/png" href="img/dinip_logo_64.png">
 
 </head>
 
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="row">
       <div class="column" style="margin-top: 10%">
-        <img src="https://cdn-bot.dinip.pt/static/dinip_logo_512.png" alt="Dinip Logo"
+        <img src="img/dinip_logo_512.png" alt="Dinip Logo"
           style="border-radius: 50%; max-width: 192px;">
         <h1>Dinip (Dinis Pimpão)</h1>
         <p>
