--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/skeleton-dark.css">
   <link rel="stylesheet" href="css/brands.css">
   <link rel="icon" type="image/png" href="img/dinip_logo_64.png">
-
+  <script defer data-domain="dinip.pt" src="https://info.dinip.pt/js/script.js"></script>
 </head>
 
 <body>
