--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>
           <span class="age"></span>yo
           <br>
-          Computer Science Student
+          Computer Science and Engineering Student
           <br>
           Backend Developer
           <br>
@@ -85,16 +85,16 @@
         <!-- <a class="button button-medium" href="#" target="_blank" rel="noopener"><img class="icon" src="icons/medium.svg" alt="Medium Logo">Medium</a>
           <br>  -->
 
+        <!-- Steam -->
+        <a class="button button-steam" href="https://steamcommunity.com/id/dinip/" target="_blank" rel="noopener"><img 
+            class="icon" src="icons/steam.svg" alt="Steam Logo">Steam</a>
+        <br>
+
         <!-- Email -->
         <a class="button button-default" href="mailto:me@dinip.pt" target="_blank" rel="noopener"><img
             class="icon" src="icons/email.svg" alt="Email Icon">me@dinip.pt</a>
         <br>
-        
-        <!-- Steam -->
-        <a class="button button-steam" href="https://steamcommunity.com/id/dinip/" target="_blank" rel="noopener"><img
-            class="icon" src="icons/steam.svg" alt="Steam Logo">Steam</a>
-        <br>
-
+           
         <br>
         <br>
       </div>
