--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   <div class="container">
     <div class="row">
       <div class="column" style="margin-top: 10%">
-        <img src="img/dinip_logo_512.png" alt="Dinip Logo"
-          style="border-radius: 50%; max-width: 192px;">
+        <img src="img/dinip_logo_512.png" alt="Dinip Logo" style="border-radius: 50%; max-width: 192px;">
         <h1>Dinip (Dinis Pimpão)</h1>
         <p>
           <span class="age"></span>yo
@@ -86,15 +85,25 @@
           <br>  -->
 
         <!-- Steam -->
-        <a class="button button-steam" href="https://steamcommunity.com/id/dinip/" target="_blank" rel="noopener"><img 
+        <a class="button button-steam" href="https://steamcommunity.com/id/dinip/" target="_blank" rel="noopener"><img
             class="icon" src="icons/steam.svg" alt="Steam Logo">Steam</a>
         <br>
 
         <!-- Email -->
-        <a class="button button-default" href="mailto:me@dinip.pt" target="_blank" rel="noopener"><img
-            class="icon" src="icons/email.svg" alt="Email Icon">me@dinip.pt</a>
+        <a class="button button-default" href="mailto:me@dinip.pt" target="_blank" rel="noopener"><img class="icon"
+            src="icons/email.svg" alt="Email Icon">me@dinip.pt</a>
         <br>
-           
+
+        <!-- StackItUp -->
+        <a class="button button-game-siu" href="https://stack-it-up.dinip.pt/" target="_blank" rel="noopener"><img
+            class="icon" src="img/stackitup.png" alt="Steam Logo">Stack It Up (game)</a>
+        <br>
+
+        <!-- DuskAndDig -->
+        <a class="button button-game-dad" href="https://dusk-and-dig.dinip.pt/" target="_blank" rel="noopener"><img
+            class="icon" src="img/duskanddig.png" alt="Steam Logo">Dusk And Dig (game)</a>
+        <br>
+
         <br>
         <br>
       </div>
