--- a/index.html
+++ b/index.html
@@ -21,30 +21,25 @@
     <div class="container">
       <div class="column">
         <img class="avatar avatar--rounded" src="https://github.com/Dinip.png" alt="Dinis Pimpão">
-
         <h1>Dinis Pimpão</h1>
-
-        <p>
-          <span class="age"></span>yo
-          <br>
-          <div>
+        <div class="bio">
+          <p>
+            <span class="age"></span>yo
+          </p>
+          <p>
             Building MyBMW/MyMINI app with<br> 
-            Flutter @ <a href="https://criticaltechworks.com/">Critical Techworks | BMW Group</a> 
-          </div>
-          <br>
-          Backend Developer in my spare time
-          <br>
-          <div>From Portugal <img src="icons/portuguese_flag.svg" class="icon" alt="Portuguese Flag"></div>
-        </p>
-
+            Flutter @ <a class="link-clean" href="https://criticaltechworks.com/">Critical Techworks | BMW Group</a> 
+          </p>
+          <p>
+            Backend Developer in my spare time
+          </p>
+          <p class="location">
+            From Portugal<img src="icons/portuguese_flag.svg" class="icon" alt="Portuguese Flag">
+          </p>
+        </div>
         <div class="button-stack" role="navigation">
-          <!-- GitHub -->
           <a class="button button-github" href="https://github.com/Dinip/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
-
-          <!-- LinkedIn -->
           <a class="button button-linked" href="https://www.linkedin.com/in/dinispimpao" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/linkedin.svg" alt="LinkedIn Logo">LinkedIn</a>
-
-          <!-- Generic Email Alt -->
           <a class="button button-default" href="mailto:me@dinispimpao.pt" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email-alt.svg" alt="Email Icon">Email Me</a>
         </div>
       </div>
